--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
+  height: 80px;
   padding: 10px;
+  width: 100%;
 }
 
 .jumbotron {
@@ -34,6 +36,14 @@ textarea{
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;;
+}
+
+.col-10 {
+  padding: 0;
+}
+
+.col {
+  padding: 0;
 }
 
 .hour {
@@ -63,6 +73,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  height: 80px;
 }
 
 .saveBtn i:hover {
