--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  height: 80px;
+  height: 100%;
   padding: 10px;
   width: 100%;
 }
@@ -35,7 +35,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .col-10 {
@@ -44,6 +44,7 @@ textarea{
 }
 
 .col {
+  height: 100%;
   padding: 0;
 }
 
@@ -74,7 +75,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-  height: 80px;
+  height: 100%;
 }
 
 .saveBtn i:hover {
