--- a/style.css
+++ b/style.css
@@ -76,9 +76,10 @@ textarea{
   background-color: #06AED5;
   color: white;
   height: 100%;
+  width: 100%;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
+  font-size: 30px;
+  transition: all .1s ease-in-out;
 }
